--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -257,10 +257,10 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <div class="col-12" style="text-align: center;">
                                         <!-- <form method="POST" action="/newClient/Added"> -->
-                                            <a href ="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
+                                            <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
                                             
                                             <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
-                                                <button class ="btn btn-secondary">Delete Client</button>
+                                                <input type="submit" class="btn btn-secondary">Delete Client</input>
                                             </form>
                                         <!-- </form> -->
                                     </div>
