added edit page routing for client and delete client

--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -260,7 +260,7 @@
                                             <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
                                             
                                             <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
-                                                <input type="submit" class="btn btn-secondary">Delete Client</input>
+                                                <input type="submit" value = "Delete Client" class="btn btn-secondary"></input>
                                             </form>
                                         <!-- </form> -->
                                     </div>
