--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -257,9 +257,9 @@
                                     <!-- <form method="POST" action="/newClient/Added"> -->
                                     <div class="col-12" style="text-align: center;">
                                             <button href = "/client" id="addClient" type="submit" class="btn btn-secondary">Return to ClientBoard</button>
-                                            
+
                                             <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
-                                                <input type="submit" class="btn btn-secondary">Delete Client</input>
+                                                <input type="submit" value="Delete Client" class="btn btn-secondary"></input>
                                             </form>
                                     </div>
                                     
