Modified client.ejs to include a button for edit client

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -265,9 +265,9 @@
                                 <th scope="col">Contact Name</th>
                                 <th scope="col">Contact Email</th>
                                 <th scope="col">Contact Phone</th>
-                                <th scope="col">Actions</th>
+                                <th scope="col">Statements</th>
                                 <th scope="col">Email Invoice</th>
-
+                                <th scope="col">Actions</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -321,6 +321,11 @@
                                     <td>
                                         <a href="/viewclient/<%= r.clientid%>" class = "btn btn-secondary">
                                             View Client
+                                        </a>
+                                    <!-- </td> -->
+                                    <!-- <td> -->
+                                        <a href="/editClient/<%= r.clientid%>" class = "btn btn-secondary">
+                                            Edit Client
                                         </a>
                                     </td>
                                     
