--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -189,7 +189,7 @@
                 <h1 class="display-1">View Clients</h1>
 
                 <div class="formcontainer">
-                    <!-- <form action="/newClient/Added" method="post"> -->
+                    <form action="/newClient/Added" method="post">
                     <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <%rows.forEach(function(r) {%>
                             <div class="row g-3 gx-5">
@@ -265,7 +265,7 @@
 
                             </div>
                         <% }); %>
-                    <!-- </form> -->
+                    </form>
                 </div>
             </div>  
         </div>
