--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -246,7 +246,7 @@
                                     <div class="col-md-12">
                                         <h2>Billing Address</h2>
                                         <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                            rows="5" placeholder="<%= r.address%>"></textarea>
+                                            rows="5" value="<%= r.address%>"></textarea>
                                         <br>
                                     </div>
                                 </div>
