Modified all client code to reflect the addition of cntrycode attribute

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,7 +308,7 @@
                                         <%= r.email %>
                                     </td>
                                     <td>
-                                        <%= r.cntrycode %> + <%= r.phone %>
+                                        + <%= r.cntrycode %> <%= r.phone %>
                                     </td>
                                     <td>
                                      
