--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -218,12 +218,12 @@
                                         <div class="col-4">
                                             <label for="inputAreaCode" class="form-label">Area Code</label>
                                             <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode"
-                                            value="" readonly="readonly">
+                                            value="<%= r.cntrycode %>" readonly="readonly">
                                         </div>
                                         <div class="col-8">
                                             <label for="inputPhoneNumber" class="form-label">Phone Number</label>
                                             <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum"
-                                            value=" " readonly="readonly">
+                                            value="<%= r.phone %>" readonly="readonly">
 
                                         </div>
                                     </div>
