modified client.ejs to display null if phone num is empty instead of +

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,7 +308,11 @@
                                         <%= r.email %>
                                     </td>
                                     <td>
-                                        + <%= r.cntrycode %> <%= r.phone %>
+                                        <% if (<%= r.cntrycode %>.length > 0 ) { %>
+                                            + <%= r.cntrycode %> <%= r.phone %>
+                                        <% } else { %>
+                                            &nbsp
+                                        <% } %>
                                     </td>
                                     <td>
                                      
