--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -228,7 +228,7 @@
                                         </div>
                                     </div>
                                     <br>
-                                    <label for="inlineRadioOptions" class="form-label">Prefered Contact</label>
+                                    <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
                                     <br>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions"
