--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -309,7 +309,7 @@
                                     </td>
                                     <td>
                                         <% if (<%= r.cntrycode %>.length > 0 ) { %>
-                                            + <%= r.cntrycode %> <%= r.phone %>
+                                            <%= r.cntrycode %>.length
                                         <% } else { %>
                                             &nbsp
                                         <% } %>
