--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,11 +308,11 @@
                                         <%= r.email %>
                                     </td>
                                     <td>
-                                        if (<%= r.phone %> !== NULL) {
+                                        <% if (= r.phone  !== NULL) { %>
                                             + <%= r.cntrycode %> <%= r.phone %>
-                                        } else { 
+                                        <% } else { %>
                                             &nbsp
-                                        }
+                                        <% } %>
                                     </td>
                                     <td>
                                      
