--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,7 +308,7 @@
                                         <%= r.email %>
                                     </td>
                                     <td>
-                                        <% if (= r.phone  !== NULL) { %>
+                                        <% if (<%= r.phone %> !== NULL) { %>
                                             + <%= r.cntrycode %> <%= r.phone %>
                                         <% } else { %>
                                             &nbsp
