--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -308,11 +308,11 @@
                                         <%= r.email %>
                                     </td>
                                     <td>
-                                        <% if (<%= r.phone %> !== "") { %>
-                                            + <%= r.cntrycode %> <%= r.phone %>
-                                        <% } else { %>
+                                        <!-- <% if (<%= r.phone %> !== "") { %> -->
+                                        <%= r.cntrycode %> <%= r.phone %>
+                                        <!-- <% } else { %>
                                             &nbsp
-                                        <% } %>
+                                        <% } %> -->
                                     </td>
                                     <td>
                                      
@@ -328,6 +328,7 @@
                                         </a>
                                     <!-- </td> -->
                                     <!-- <td> -->
+                                        <br>
                                         <br>
                                         <a href="/editClient/<%= r.clientid%>" class = "btn btn-secondary">
                                             Edit Client
