--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -189,7 +189,7 @@
                 <h1 class="display-1">Edit Clients</h1>
 
                 <div class="formcontainer">
-                    <form action="/newClient/Added" method="post">
+                    <form action="/updateclient/:clientid" method="post">
                     <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <%rows.forEach(function(r) {%>
                             <div class="row g-3 gx-5">
@@ -197,6 +197,8 @@
                                     <h2>Client Information</h2>
                                     <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
                                     <input type="text" class="form-control" id="inputClientName" name="inClName" value="<%= r.clientname %>">
+                                    <!-- Add hidden name in case of name change and for checking if the clientid matches old name; ensures unique clientid -->
+                                    <input type="hidden" name="oldName" value="<%= r.clientname %>"> 
                                     <br>
                                     <label for="inputClientID" class="form-label">Client ID</label>
                                     <input type="text" class="form-control" id="inputClientID" name="inClID" value="<%= r.clientid %>">
@@ -212,7 +214,6 @@
                                     <br>
                                     <div class="row g-3 gx-5">
                                         <div class="col-4">
-                                            <!-- Area code can only be one digit long; need to show error when user is typing more than 1 digit -->
                                             <label for="inputAreaCode" class="form-label">Area Code</label>
                                             <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode" 
                                             value="<%= r.cntrycode %>">
@@ -251,7 +252,10 @@
                                 <!-- <form method="POST" action="/newClient/Added"> -->
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newClient/Added"> -->
-                                        <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
+                                        <!-- <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a> -->
+                                        <!-- <form method="POST" action ='/updateclient/<%= r.clientid%>'> -->
+                                            <input type="submit" value = "Update Info" class="btn btn-secondary"></input>
+                                        <!-- </form> -->
                                         
                                         <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
                                             <input type="submit" value = "Delete Client" class="btn btn-secondary"></input>
