--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -224,7 +224,7 @@
                                     </div>
                                 </div>
                                 <br>
-                                <label for="inlineRadioOptions" class="form-label">Preffered Contact</label>
+                                <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
                                 <br>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" type="radio" name="inlineRadioOptions"
@@ -236,19 +236,16 @@
                                         id="inlineRadio2" value="Phone">
                                     <label class="form-check-label" for="inlineRadio2">Phone</label>
                                 </div>
-
-
-
                             </div>
 
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
                                     <h2>Billing Address</h2>
-                                    <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                        rows="5"></textarea>
+                                    <input type="textarea" class="form-control" id="billingAddress" name="inAddr" classname="Text1" 
+                                    cols="40" rows="5">
+                                    <!-- </textarea> -->
                                     <br>
                                 </div>
-
                             </div>
 
                             <!-- <form method="POST" action="/newClient/Added"> -->
@@ -260,7 +257,6 @@
                             <!-- </form> -->
 
                         </div>
-
                     </form>
                 </div>
             </div>
