Testing if..else.. condition in client.ejs

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -309,7 +309,7 @@
                                     </td>
                                     <td>
                                         <% if (r.phone) { %>
-                                            <%= r.cntrycode %> <%= r.phone %>
+                                            + <%= r.cntrycode %> <%= r.phone %>
                                         <% } else { %>
                                             <%= r.phone %>
                                         <% } %>
