Added ability to input client billing address

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -240,7 +240,8 @@
 
                             <div class="row g-3 gx-5">
                                 <div class="col-md-12">
-                                    <h2>Billing Address</h2>
+                                    <!-- <h2>Billing Address</h2> -->
+                                    <label for="billingAddress" class="form-label">Billing Address</label>
                                     <input type="textarea" class="form-control" id="billingAddress" name="inAddr" classname="Text1" 
                                     cols="40" rows="5">
                                     <!-- </textarea> -->
