--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -242,9 +242,11 @@
 
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
-                                        <h2>Billing Address</h2>
-                                        <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                            rows="5" value="<%= r.address%>"></textarea>
+                                        <!-- <h2>Billing Address</h2> -->
+                                        <label for="billingAddress" class="form-label">Billing Address</label>
+                                        <input type="textarea" class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
+                                            rows="5" value="<%= r.address%>">
+                                        <!-- </textarea> -->
                                         <br>
                                     </div>
                                 </div>
