--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -230,12 +230,12 @@
                                     <br>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio1" placeholder="Email">
+                                            id="inlineRadio1" value="EMAIL">
                                         <label class="form-check-label" for="inlineRadio1">Email</label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio2" value="Phone">
+                                            id="inlineRadio2" value="PHONE">
                                         <label class="form-check-label" for="inlineRadio2">Phone</label>
                                     </div>
                                 </div>
