--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -11,7 +11,7 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/form.css">
@@ -190,40 +190,40 @@
 
                 <div class="formcontainer">
                     <form action="/newClient/Added" method="post">
-                    <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
+                        <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <%rows.forEach(function(r) {%>
                             <div class="row g-3 gx-5">
                                 <div class="col-md-6">
                                     <h2>Client Information</h2>
                                     <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
-                                    <input type="text" class="form-control" id="inputClientName" name="inClName" 
-                                    value="<%= r.clientname %>" readonly="readonly">
+                                    <input type="text" class="form-control" id="inputClientName" name="inClName"
+                                        value="<%= r.clientname %>" readonly="readonly">
                                     <br>
                                     <label for="inputClientID" class="form-label">Client ID</label>
                                     <input type="text" class="form-control" id="inputClientID" name="inClID"
-                                    value="<%= r.clientid %>"  readonly="readonly">
+                                        value="<%= r.clientid %>" readonly="readonly">
                                 </div>
 
                                 <div class="col-md-6">
                                     <h2>Contact Information</h2>
                                     <label for="inputContactName" class="form-label">Contact Name</label>
-                                    <input type="text" class="form-control" id="inputContactName" name="inConName" 
-                                    value="<%= r.contactname %>" readonly="readonly">
+                                    <input type="text" class="form-control" id="inputContactName" name="inConName"
+                                        value="<%= r.contactname %>" readonly="readonly">
                                     <br>
                                     <label for="inputEmail" class="form-label">Email-Address</label>
-                                    <input type="email" class="form-control" id="inputEmail" name="inEmail" 
-                                    value="<%= r.email %>" readonly="readonly">
+                                    <input type="email" class="form-control" id="inputEmail" name="inEmail"
+                                        value="<%= r.email %>" readonly="readonly">
                                     <br>
                                     <div class="row g-3 gx-5">
                                         <div class="col-4">
                                             <label for="inputAreaCode" class="form-label">Area Code</label>
                                             <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode"
-                                            value="<%= r.cntrycode %>" readonly="readonly">
+                                                value="<%= r.cntrycode %>" readonly="readonly">
                                         </div>
                                         <div class="col-8">
                                             <label for="inputPhoneNumber" class="form-label">Phone Number</label>
                                             <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum"
-                                            value="<%= r.phone %>" readonly="readonly">
+                                                value="<%= r.phone %>" readonly="readonly">
 
                                         </div>
                                     </div>
@@ -245,8 +245,8 @@
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <h2>Billing Address</h2>
-                                        <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                            rows="5" value="<%= r.address%>"></textarea>
+                                        <textarea class="form-control" id="billingAddress" name="inAddr"
+                                            classname="Text1" cols="40" rows="5" value="<%= r.address%>"></textarea>
                                         <br>
                                     </div>
                                 </div>
@@ -254,20 +254,20 @@
                                 <!-- <form method="POST" action="/newClient/Added"> -->
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newClient/Added"> -->
-                                        <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
-                                        
-                                        <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
-                                            <input type="submit" value = "Delete Client" class="btn btn-secondary"></input>
-                                        </form>
+                                    <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a>
+
+                                    <form method="POST" action='/deleteclient/<%= r.clientid%>'>
+                                        <input type="submit" value="Delete Client" class="btn btn-secondary"></input>
+                                    </form>
                                     <!-- </form> -->
                                 </div>
                                 <!-- </form> -->
 
                             </div>
-                        <% }); %>
+                            <% }); %>
                     </form>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
 
