--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -228,16 +228,40 @@
                                     <br>
                                     <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
                                     <br>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio1" value="EMAIL">
-                                        <label class="form-check-label" for="inlineRadio1">Email</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                            id="inlineRadio2" value="PHONE">
-                                        <label class="form-check-label" for="inlineRadio2">Phone</label>
-                                    </div>
+                                    <% if (r.contactmethod == 'EMAIL') { %>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" value="EMAIL" checked="checked">
+                                            <label class="form-check-label" for="inlineRadio1">Email</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="PHONE">
+                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                        </div>
+                                    <% } else if (r.contactmethod == 'PHONE') { %>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" value="EMAIL">
+                                            <label class="form-check-label" for="inlineRadio1">Email</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="PHONE" checked="checked">
+                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                        </div>
+                                    <% } else { %>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" value="EMAIL">
+                                            <label class="form-check-label" for="inlineRadio1">Email</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="PHONE">
+                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                        </div>
+                                    <% } %>
                                 </div>
 
                                 <div class="row g-3 gx-5">
