--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -190,45 +190,49 @@
 
                 <div class="formcontainer">
                     <form action="/updateclient/:clientid" method="post">
-                    <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
+                        <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
                         <%rows.forEach(function(r) {%>
                             <div class="row g-3 gx-5">
                                 <div class="col-md-6">
                                     <h2>Client Information</h2>
                                     <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
-                                    <input type="text" class="form-control" id="inputClientName" name="inClName" value="<%= r.clientname %>">
+                                    <input type="text" class="form-control" id="inputClientName" name="inClName"
+                                        value="<%= r.clientname %>">
                                     <!-- Add hidden name in case of name change and for checking if the clientid matches old name; ensures unique clientid -->
-                                    <input type="hidden" name="oldName" value="<%= r.clientname %>"> 
+                                    <input type="hidden" name="oldName" value="<%= r.clientname %>">
                                     <br>
                                     <label for="inputClientID" class="form-label">Client ID</label>
-                                    <input type="text" class="form-control" id="inputClientID" name="inClID" value="<%= r.clientid %>">
+                                    <input type="text" class="form-control" id="inputClientID" name="inClID"
+                                        value="<%= r.clientid %>">
                                 </div>
 
                                 <div class="col-md-6">
                                     <h2>Contact Information</h2>
                                     <label for="inputContactName" class="form-label">Contact Name</label>
-                                    <input type="text" class="form-control" id="inputContactName" name="inConName" value="<%= r.contactname %>">
+                                    <input type="text" class="form-control" id="inputContactName" name="inConName"
+                                        value="<%= r.contactname %>">
                                     <br>
                                     <label for="inputEmail" class="form-label">Email-Address</label>
-                                    <input type="email" class="form-control" id="inputEmail" name="inEmail" value="<%= r.email %>">
+                                    <input type="email" class="form-control" id="inputEmail" name="inEmail"
+                                        value="<%= r.email %>">
                                     <br>
                                     <div class="row g-3 gx-5">
                                         <div class="col-4">
                                             <label for="inputAreaCode" class="form-label">Area Code</label>
-                                            <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode" 
-                                            value="<%= r.cntrycode %>">
+                                            <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode"
+                                                value="<%= r.cntrycode %>">
                                         </div>
                                         <div class="col-8">
                                             <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                                            <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum" 
-                                            value="<%= r.phone %>">
+                                            <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum"
+                                                value="<%= r.phone %>">
 
                                         </div>
                                     </div>
                                     <br>
                                     <label for="inlineRadioOptions" class="form-label">Preferred Contact</label>
                                     <br>
-                                    <% if (r.contactmethod == 'EMAIL') { %>
+                                    <% if (r.contactmethod=='EMAIL' ) { %>
                                         <div class="form-check form-check-inline">
                                             <input class="form-check-input" type="radio" name="inlineRadioOptions"
                                                 id="inlineRadio1" value="EMAIL" checked="checked">
@@ -239,37 +243,37 @@
                                                 id="inlineRadio2" value="PHONE">
                                             <label class="form-check-label" for="inlineRadio2">Phone</label>
                                         </div>
-                                    <% } else if (r.contactmethod == 'PHONE') { %>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio1" value="EMAIL">
-                                            <label class="form-check-label" for="inlineRadio1">Email</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="PHONE" checked="checked">
-                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
-                                        </div>
-                                    <% } else { %>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio1" value="EMAIL">
-                                            <label class="form-check-label" for="inlineRadio1">Email</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="PHONE">
-                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
-                                        </div>
-                                    <% } %>
+                                        <% } else if (r.contactmethod=='PHONE' ) { %>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                    id="inlineRadio1" value="EMAIL">
+                                                <label class="form-check-label" for="inlineRadio1">Email</label>
+                                            </div>
+                                            <div class="form-check form-check-inline">
+                                                <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                    id="inlineRadio2" value="PHONE" checked="checked">
+                                                <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                            </div>
+                                            <% } else { %>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio"
+                                                        name="inlineRadioOptions" id="inlineRadio1" value="EMAIL">
+                                                    <label class="form-check-label" for="inlineRadio1">Email</label>
+                                                </div>
+                                                <div class="form-check form-check-inline">
+                                                    <input class="form-check-input" type="radio"
+                                                        name="inlineRadioOptions" id="inlineRadio2" value="PHONE">
+                                                    <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                                </div>
+                                                <% } %>
                                 </div>
 
                                 <div class="row g-3 gx-5">
                                     <div class="col-md-12">
                                         <!-- <h2>Billing Address</h2> -->
                                         <label for="billingAddress" class="form-label">Billing Address</label>
-                                        <input type="textarea" class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
-                                            rows="5" value="<%= r.address%>">
+                                        <input type="textarea" class="form-control" id="billingAddress" name="inAddr"
+                                            classname="Text1" cols="40" rows="5" value="<%= r.address%>">
                                         <!-- </textarea> -->
                                         <br>
                                     </div>
@@ -278,20 +282,20 @@
                                 <!-- <form method="POST" action="/newClient/Added"> -->
                                 <div class="col-12" style="text-align: center;">
                                     <!-- <form method="POST" action="/newClient/Added"> -->
-                                        <!-- <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a> -->
-                                        <!-- <form method="POST" action ='/updateclient/<%= r.clientid%>'> -->
-                                            <input type="submit" value = "Update Info" class="btn btn-secondary"></input>
-                                        <!-- </form> -->
-                                        
-                                        <form method="POST" action ='/deleteclient/<%= r.clientid%>'>
-                                            <input type="submit" value = "Delete Client" class="btn btn-secondary"></input>
-                                        </form>
+                                    <!-- <a href="/editClient/<%= r.clientid%>" class="btn btn-secondary">Edit Client</a> -->
+                                    <!-- <form method="POST" action ='/updateclient/<%= r.clientid%>'> -->
+                                    <input type="submit" value="Update Info" class="btn btn-secondary"></input>
+                                    <!-- </form> -->
+
+                                    <form method="POST" action='/deleteclient/<%= r.clientid%>'>
+                                        <input type="submit" value="Delete Client" class="btn btn-secondary"></input>
+                                    </form>
                                     <!-- </form> -->
                                 </div>
                                 <!-- </form> -->
 
                             </div>
-                        <% }); %>
+                            <% }); %>
                     </form>
                 </div>
             </div>
@@ -299,3 +303,5 @@
     </div>
 
 </body>
+
+</html>
