--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -11,10 +11,10 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/sidebars.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/sidebars.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/home.css">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/form.css">
 
     <script src="js/main.js"></script>
 
