--- a/views/pages/viewClient.ejs
+++ b/views/pages/viewClient.ejs
@@ -11,10 +11,10 @@
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
 
-    <link href="/public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/sidebars.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/form.css">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://guarded-springs-56328.herokuapp.com/css/sidebars.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/home.css">
+    <link rel="stylesheet" href="https://guarded-springs-56328.herokuapp.com/css/form.css">
 
     <script src="js/main.js"></script>
 
@@ -111,8 +111,8 @@
                 <div class="position-fixed">
                     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark " style="width: 280px;">
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" alt="" width="70" height="70"
-                                class="d-inline-block align-text-top">
+                            <img src="https://guarded-springs-56328.herokuapp.com/images/logo.png" alt="" width="70"
+                                height="70" class="d-inline-block align-text-top">
                             Bytetools
                         </a>
 
