--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -111,8 +111,8 @@
                 <div class="position-fixed">
                     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark " style="width: 280px;">
                         <a class="navbar-brand" href="#">
-                            <img src="images/logo.png" alt="" width="70" height="70"
-                                class="d-inline-block align-text-top">
+                            <img src="https://guarded-springs-56328.herokuapp.com/images/logo.png" alt="" width="70"
+                                height="70" class="d-inline-block align-text-top">
                             Bytetools
                         </a>
 
